Fix bug where scrollbar would take up full width of test runner instead of only command log in Chrome 72+

--- a/packages/runner/src/app/app.scss
+++ b/packages/runner/src/app/app.scss
@@ -6,7 +6,7 @@
   min-width: $reporter-min-width;
   bottom: 0;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   left: 0;
   position: absolute;
   top: 0;
